overflow-x correction

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
 	color: #050505;
 	min-height: 100%;
 	position: relative;
+	overflow-x: hidden;
 }
 
 .caption-date {
